  srprop and srinfo.
* (bug 20700) Add amprop=default to meta=allmessages to list default value for
  customized messages
* Don't parse magic words in meta=allmessages, output messages unparsed
* (bug 21105) list=usercontribs can now list contribs for User:0
* (bug 21085) list=deletedrevs no longer returns only one revision when
  drcontinue param is passed

=== Languages updated in 1.16 ===

MediaWiki supports over 300 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of MediaZilla reports.

* Kirmanjki (kiu) (new)
* Lower Silesian (sli) (new)
* Picard (pcd) (new)
* Uyghur (Arabic script) (ug-arab) (new)
* Eastern Yiddish (ydd) (removed)
* Iriga Bicolano (bto) (removed)
* Ladin (lld) (removed)
* Laz (lzz) (removed)
* Palembang (plm) (removed)
* Megleno-Romanian (Greek script) (ruq-grek) (removed)
* Tamazight (tzm) (removed)

* (bug 18474) Sorani (ckb - Central Kurdish) (renamed from ku-arab)
* Add PLURAL function for Scots Gaelic (gd)
* Add Estonian letters äöõšüž to linktrail (et)
* (bug 18776) Native name of Burmese language (my)
* (bug 18806) Use correct unicode characters in spelling of native Chuvash
  (Чӑвашла)
* (bug 18864) Updated autonym for Zhuang language
* (bug 18308) Updated date formatting in Occitan (oc)
* (bug 19080) Added ăâîşţșțĂÂÎŞŢȘȚ to Romanion (ro) linktrail
* (bug 19286) Correct commafying function in Polish (pl)
* (bug 19441) Updated date formatting for Lithuanian
* (bug 19630) Added ÄäÇçĞğŇňÖöŞşÜüÝýŽž to Turkmen (tk) linktrail
* (bug 19949) New linktrail for Greek (el)
* (bug 19809) Korean (North Korea) (ko-kp) (new)
* (bug 19968) Fixed "Project talk" namespace name for Maltese (mt)
* (bug 21168) Added áâãàéêçíóôõúü to Portuguese (pt) linktrail

== Compatibility ==

MediaWiki 1.16 requires PHP 5 (5.2 recommended). PHP 4 is no longer supported.

PHP 5.0.x fails on 64-bit systems due to serious bugs with array processing: